--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".SplashScreenActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_splash_screen"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".Introduction.IntroductionMain">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,7 +44,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".Login.Login" />
-
         <activity android:name=".Login.RegisterBasicInfo" />
         <activity android:name=".Matched.Matched_Activity" />
         <activity android:name=".Profile.Profile_Activity" />
@@ -47,7 +57,7 @@
         <activity android:name=".Login.RegisterHobby" />
         <activity android:name=".Profile.SettingsActivity" />
         <activity android:name=".Main.BtnLikeActivity" />
-        <activity android:name=".Main.BtnDislikeActivity"></activity>
+        <activity android:name=".Main.BtnDislikeActivity" />
     </application>
 
 </manifest>
